--- a/package.json
+++ b/package.json
@@ -93,8 +93,12 @@
     "postcss": "^8.5.6",
     "prisma": "^6.17.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
