--- a/vercel.json
+++ b/vercel.json
@@ -18,8 +18,9 @@
       "destination": "/api/$1"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!api).*)",
       "destination": "/index.html"
     }
+
   ]
 }
