--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
