--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
+    "formidable": "^3.5.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
+    "mongodb": "^6.20.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
