--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "mongodb": "^6.20.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
