--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
+    "react-calendar": "^6.0.0",
     "react-chatbot-kit": "^2.2.2",
     "react-chatbotify": "^2.4.1",
     "react-day-picker": "^8.10.1",
