--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "sonner": "^1.7.4",
     "swiper": "^12.0.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^48.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
