--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -40,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sendgrid/mail": "^8.1.6",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -65,17 +67,20 @@
     "react-chatbotify": "^2.4.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-masonry-css": "^1.0.16",
     "react-photo-album": "^3.2.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
     "swiper": "^12.0.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vercel": "^48.6.7"
+    "vercel": "^48.6.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
