melhoria no UX de AdminAbout.tsx e mudanças na ordem das paginas do sidebar

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sendgrid/mail": "^8.1.6",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -70,6 +71,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-masonry-css": "^1.0.16",
     "react-photo-album": "^3.2.0",
     "react-router-dom": "^6.30.1",
