--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-masonry-css": "^1.0.16",
     "react-photo-album": "^3.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
