--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "resend": "^6.4.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
     "swiper": "^12.0.2",
