--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "prop-types": "^15.8.1",
+    "quill-blot-formatter": "^1.0.5",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
@@ -78,7 +79,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-masonry-css": "^1.0.16",
     "react-photo-album": "^3.2.0",
-    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
     "resend": "^6.4.1",
